Added new footer ui with waves

--- a/index.html
+++ b/index.html
@@ -23,35 +23,9 @@
 </head>
 
 <body>
-  <!-- navbar -->
-  <!-- <nav class="nav" id="nav">
-    <div class="nav-center">
 
-      <div class="nav-header">
-        <a href="https://ashish5jha.github.io/portfolio/"><img src="./assets/logo.webp" width="60px" height="60px"
-            class="nav-logo" alt="nav logo"></a>
-        <button class="nav-btn" id="nav-btn">
-          <i class="fas fa-bars"></i>
-        </button>
-      </div>
-      <ul class="nav-links">
-        <li>
-          <a href="https://ashish5jha.github.io/portfolio/">.home</a>
-        </li>
-        <li>
-          <a href="https://ashish5jha.github.io/portfolio/about">.about</a>
-        </li>
-        <li>
-          <a href="https://ashish5jha.github.io/portfolio/projects">.projects</a>
-        </li>
-        <li>
-          <a href="https://ashish5jha.github.io/portfolio/contact">.contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav> -->
-  <a href="https://ashish5jha.github.io/portfolio/"><img src="./assets/logo.webp" width="60px"
-      height="60px" class="nav-logo" alt="nav logo"></a>
+  <a href="https://ashish5jha.github.io/portfolio/"><img src="./assets/logo.webp" width="60px" height="60px"
+      class="nav-logo" alt="nav logo"></a>
 
   <!-- Resume Button -->
   <button href="#" class="button" style="--clr: #7808d0" onclick="getResume()">
@@ -59,63 +33,6 @@
     Resume
   </button>
 
-
-
-  <!-- sidebar -->
-  <!-- <aside class="sidebar" id="sidebar">
-    <div>
-      <button class="close-btn" id="close-btn">
-        <i class="far fa-window-close"></i>
-      </button>
-      <ul class="sidebar-links">
-        <li class="li-style">
-          <i class="fas fa-home sidebar-icon"></i>
-          <a href="https://ashish5jha.github.io/portfolio/">home</a>
-        </li>
-        <li class="li-style">
-          <i class="fas fa-user-alt sidebar-icon"></i>
-          <a href="https://ashish5jha.github.io/portfolio/about">about</a>
-        </li>
-        <li class="li-style">
-          <i class="fas fa-file-code sidebar-icon"></i>
-          <a href="https://ashish5jha.github.io/portfolio/projects">projects</a>
-        </li>
-        <li class="li-style">
-          <i class="fas fa-envelope sidebar-icon"></i>
-          <a href="https://ashish5jha.github.io/portfolio/contact">contact</a>
-        </li>
-      </ul>
-      <ul class="social-icons">
-        <li class="side-social-neumorph">
-          <a href="https://github.com/ashishjha" class="social-icon" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-        </li>
-        <li class="side-social-neumorph">
-          <a href="https://www.linkedin.com/in/ashish-jha-922a4a175/" class="social-icon" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
-        </li>
-        <li class="side-social-neumorph">
-          <a href="https://www.facebook.com/ashish6399/" class="social-icon" target="_blank">
-            <i class="fab fa-facebook"></i>
-          </a>
-        </li>
-        <li class="side-social-neumorph">
-          <a href="https://www.instagram.com/the_ashish.jha/" class="social-icon" target="_blank">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </li>
-        <li class="side-social-neumorph">
-          <a href="https://twitter.com/JhaAshish_Dev" class="social-icon" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </aside> -->
-
-  <!-- end of sidebar -->
   <!-- header -->
   <header class="hero">
     <div class=" hero-center wrapper">
@@ -201,8 +118,7 @@
             </div>
           </div>
           <div class="panda">
-            <img src="./assets/panda.gif" alt="Hi_Panda" width="85px"
-              style="width: 85px;height: 85px;">
+            <img src="./assets/panda.gif" alt="Hi_Panda" width="85px" style="width: 85px;height: 85px;">
           </div>
         </div>
 
@@ -379,8 +295,7 @@
     <div class="section-title exp-title">
       <h2 class="experience">Experience</h2>
       <div>
-        <img src="./assets/tree.gif" alt="tree"
-          style="width:  55px; height: 60px; margin-bottom: 10px;">
+        <img src="./assets/tree.gif" alt="tree" style="width:  55px; height: 60px; margin-bottom: 10px;">
       </div>
     </div>
 
@@ -945,29 +860,57 @@
   </section>
 
   <!-- footer -->
-   <footer class="">
-      <div class="footer-container">
-         
-      </div>
-      <p style="opacity: 0;">© <span id="date">2024</span> Ashish Jha. All rights reserved.</p>
+  <footer class="">
+    <div class="footer-container">
+
+    </div>
+    <p style="opacity: 0;">© <span id="date">2024</span> Ashish Jha. All rights reserved.</p>
   </footer>
   <footer class="last-footer">
+
     <div class="last-fwaves">
-        <div class="last-fwave" id="last-wave1"></div>
+      <div class="last-fwave" id="last-wave1"></div>
     </div>
     <div class="foot-container">
       <div class="foot-container1">
         <ul class="foot-collection">
           <li>Home</li>
+          <li>About</li>
+          <li>Skills</li>
+          <li>Eductaion</li>
           <li>Experience</li>
-          <li>Project</li>
+          <li>Projects</li>
           <li>Contact</li>
-          <li>Timeline</li>
         </ul>
       </div>
-      <div class="foot-container2"></div>
-  </div>
-</footer>
+      <div class="foot-container2">
+        <div class="loc">
+          <i class="fas fa-map-marker-alt"></i> &nbsp;Delhi,&nbsp;India&nbsp; 💕
+        </div>
+        <div class="foot-name">Ashish Jha,</div>
+        <div class="foot-title" >Software  Developer</div>
+        <article class="hero-info">
+          <ul class="social-icons foot-hero-icons">
+            <li class="foot-index-neumorph">
+              <a href="https://github.com/Ashjha75" class="social-icon" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <li class="foot-index-neumorph">
+              <a href="https://www.linkedin.com/in/ashish-jha-890ab3206/" class="social-icon" target="_blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+            <li class="foot-index-neumorph">
+              <a href="https://x.com/Ashish5Jha" class="social-icon" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </article>
+      </div>
+    </div>
+  </footer>
   <script src="./assets/app.js"></script>
 </body>
 
