--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </button>
 
   <!-- header -->
-  <header class="hero">
+  <header class="hero" id="home">
     <div class=" hero-center wrapper">
       <div
         style="z-index: 1; display: flex; justify-content: space-around; align-items: center; min-width: 100vw !important;padding: 12px;"
@@ -75,7 +75,7 @@
   </header>
   <!-- end of header -->
   <!-- about -->
-  <section class="section about">
+  <section class="section about" id="about">
     <div class="section-center about-center">
       <article class="about-img">
         <img src="./assets/ashishj.jpg" class="hero-photos" alt="about img">
@@ -107,7 +107,7 @@
       </article>
     </div>
   </section>
-  <section class="section skills">
+  <section class="section skills" id="skills">
     <div class="section-center" style="width: 100%; justify-content: start;align-items: center;display: flex;">
       <article class="about-info">
         <div class="section-title about-title  "
@@ -254,7 +254,7 @@
 
     </div>
   </section>
-  <section class="section bg-grey">
+  <section class="section bg-grey" id="education">
     <div class="section-title exp-title">
       <h2 class="experience">education</h2>
       <div>
@@ -290,7 +290,7 @@
     </div>
   </section>
 
-  <section class="section projects exp-sec">
+  <section class="section projects exp-sec" id="experience">
 
     <div class="section-title exp-title">
       <h2 class="experience">Experience</h2>
@@ -329,7 +329,7 @@
   </section>
 
 
-  <section class="section skills">
+  <section class="section skills" id="projects">
 
     <div class="section-center" style="width: 100%; justify-content: start;align-items: center;display: flex;">
 
@@ -719,7 +719,7 @@
   </section>
 
 
-  <Section class="contact">
+  <Section class="contact" id="contact">
     <div class="section-title exp-title">
       <h2 class="experience">Contact</h2>
       <!-- <div>
@@ -874,13 +874,13 @@
     <div class="foot-container">
       <div class="foot-container1">
         <ul class="foot-collection">
-          <li>Home</li>
-          <li>About</li>
-          <li>Skills</li>
-          <li>Eductaion</li>
-          <li>Experience</li>
-          <li>Projects</li>
-          <li>Contact</li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
       <div class="foot-container2">
@@ -888,7 +888,7 @@
           <i class="fas fa-map-marker-alt"></i> &nbsp;Delhi,&nbsp;India&nbsp; 💕
         </div>
         <div class="foot-name">Ashish Jha,</div>
-        <div class="foot-title" >Software  Developer</div>
+        <div class="foot-title">Software Developer</div>
         <article class="hero-info">
           <ul class="social-icons foot-hero-icons">
             <li class="foot-index-neumorph">
