added new section in footer

--- a/index.html
+++ b/index.html
@@ -908,6 +908,12 @@
             </li>
           </ul>
         </article>
+        <p class="thanks">
+          Special thanks to <span class=""><a href="https://uiverse.io" class="foot-title-a" target="_blank">uiverse.io</a>, <a
+              href="https://www.flaticon.com" target="_blank" class="foot-title-a">Flaticon</a>, <a
+              href="https://www.overleaf.com/" target="_blank" class="foot-title-a">Overleaf</a> </span>and other
+          amazing resources for providing free content and inspiration.
+        </p>
       </div>
     </div>
   </footer>
