added just title for deployments

--- a/index.html
+++ b/index.html
@@ -723,6 +723,11 @@
 
 
   <section class="section-genius-adv section-strength section-vertical-space">
+    <div class="section-title exp-title">
+      <h2 class="experience">My Blogs on Notion🌱</h2>
+      <div>
+      </div>
+    </div>
     <div class="wrap">
       <div class="section-strength-row">
         <div class="section-strength-col">
