this commit will add the new blog animted ui

--- a/index.html
+++ b/index.html
@@ -719,8 +719,6 @@
   </section>
 
 
-  <!-- Blog------------------------------------------..---------------------------------------------------------- -->
-
 
   <section class="section-genius-adv section-strength section-vertical-space">
     <div class="section-title exp-title">
@@ -730,7 +728,7 @@
     </div>
     <div class="wrap">
       <div class="section-strength-row">
-        <div class="section-strength-col">
+        <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob1.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob1.svg"
@@ -747,7 +745,7 @@
               to your advantage &amp; apply for jobs faster.</p>
           </div>
         </div>
-        <div class="section-strength-col">
+        <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob2.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob2.svg"
@@ -764,7 +762,7 @@
               experience bullet points that prove your on-the-job skills.</p>
           </div>
         </div>
-        <div class="section-strength-col">
+        <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob3.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob3.svg"
@@ -781,7 +779,7 @@
               your details and the resume maker does the rest.</p>
           </div>
         </div>
-        <div class="section-strength-col">
+        <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob4.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob4.svg"
@@ -798,7 +796,7 @@
               test different templates to see what works best for you.</p>
           </div>
         </div>
-        <div class="section-strength-col">
+        <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob5.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob5.svg"
@@ -815,7 +813,7 @@
               professional feedback after you’ve made your resume.</p>
           </div>
         </div>
-        <div class="section-strength-col">
+        <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob6.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob6.svg"
