added new Blog links to the blog section

--- a/index.html
+++ b/index.html
@@ -728,47 +728,47 @@
     </div>
     <div class="wrap">
       <div class="section-strength-row">
-        <div class="section-strength-col animated-svg">
+        <div class="section-strength-col animated-svg"
+          onclick="goTo('https://hypnotic-amphibian-c6e.notion.site/Spring-Beans-12c986bf282a802b8fc1e1340cd71931')">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob1.svg" alt="" width="80" height="80"
-              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob1.svg"
-                alt="" width="80" height="80"></noscript> <object data-target="div.section-strength-col"
-              type="image/svg+xml" class="animated-svg lazy"
-              data="./assets/animated_ai-laptop_blue.svg"></object>
+              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob1.svg" alt="" width="80"
+                height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
+              class="animated-svg lazy" data="./assets/animated_ai-laptop_blue.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_ai-laptop_blue.svg"></noscript>
 
           </div>
           <div class="section-strength-content">
-            <h3 class="title-xs section-strength-title">Leverage the latest tech</h3>
-            <p class="body-sm">Our resume builder lets you make a fully customized resume in minutes. Use our software
-              to your advantage &amp; apply for jobs faster.</p>
+            <h3 class="title-xs section-strength-title">Spring Beans</h3>
+            <p class="body-sm">In the Spring Framework, a Bean is an object that is instantiated, assembled, and managed
+              by the Spring IoC (Inversion of Control) container. Beans are the backbone of any Spring application and
+              are created based on configuration metadata provided in XML, Java annotations, or Java configuration.</p>
           </div>
         </div>
-        <div class="section-strength-col animated-svg">
+        <div class="section-strength-col animated-svg"
+          onclick="goTo('https://hypnotic-amphibian-c6e.notion.site/Spring-Boot-Application-768cddb1005e4c61818ffa4ca71027ba')">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob2.svg" alt="" width="80" height="80"
-              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob2.svg"
-                alt="" width="80" height="80"></noscript> <object data-target="div.section-strength-col"
-              type="image/svg+xml" class="animated-svg lazy"
-              data="./assets/animated_document_orange.svg"></object>
+              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob2.svg" alt="" width="80"
+                height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
+              class="animated-svg lazy" data="./assets/animated_document_orange.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_document_orange.svg"></noscript>
 
           </div>
           <div class="section-strength-content">
-            <h3 class="title-xs section-strength-title">Generate bullet points</h3>
-            <p class="body-sm">Your resume’s experience section is what employers care about most. Autogenerate
-              experience bullet points that prove your on-the-job skills.</p>
+            <h3 class="title-xs section-strength-title">Spring Boot Application</h3>
+            <p class="body-sm">When we start a Spring Boot application, a series of events unfold, orchestrated
+              primarily by the Spring framework...</p>
           </div>
         </div>
         <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob3.svg" alt="" width="80" height="80"
-              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob3.svg"
-                alt="" width="80" height="80"></noscript> <object data-target="div.section-strength-col"
-              type="image/svg+xml" class="animated-svg lazy"
-              data="./assets/animated_database-success_green.svg"></object>
+              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob3.svg" alt="" width="80"
+                height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
+              class="animated-svg lazy" data="./assets/animated_database-success_green.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_database-success_green.svg"></noscript>
 
@@ -782,10 +782,9 @@
         <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob4.svg" alt="" width="80" height="80"
-              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob4.svg"
-                alt="" width="80" height="80"></noscript> <object data-target="div.section-strength-col"
-              type="image/svg+xml" class="animated-svg lazy"
-              data="./assets/animated_download_pink.svg"></object>
+              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob4.svg" alt="" width="80"
+                height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
+              class="animated-svg lazy" data="./assets/animated_download_pink.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_download_pink.svg"></noscript>
 
@@ -799,10 +798,9 @@
         <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob5.svg" alt="" width="80" height="80"
-              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob5.svg"
-                alt="" width="80" height="80"></noscript> <object data-target="div.section-strength-col"
-              type="image/svg+xml" class="animated-svg lazy"
-              data="./assets/animated_concept-sharing_purple.svg"></object>
+              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob5.svg" alt="" width="80"
+                height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
+              class="animated-svg lazy" data="./assets/animated_concept-sharing_purple.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_concept-sharing_purple.svg"></noscript>
 
@@ -816,10 +814,9 @@
         <div class="section-strength-col animated-svg">
           <div class="section-strength-img">
             <img class="lazy" src="./assets/blob6.svg" alt="" width="80" height="80"
-              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob6.svg"
-                alt="" width="80" height="80"></noscript> <object data-target="div.section-strength-col"
-              type="image/svg+xml" class="animated-svg lazy"
-              data="./assets/animated_rocket_yellow.svg"></object>
+              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob6.svg" alt="" width="80"
+                height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
+              class="animated-svg lazy" data="./assets/animated_rocket_yellow.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_rocket_yellow.svg"></noscript>
 
@@ -1031,9 +1028,10 @@
           </ul>
         </article>
         <p class="thanks">
-          Special thanks to <span class=""><a href="https://uiverse.io" class="foot-title-a" target="_blank">uiverse.io</a>, <a
-              href="https://www.flaticon.com" target="_blank" class="foot-title-a">Flaticon</a>, <a
-              href="https://www.overleaf.com/" target="_blank" class="foot-title-a">Overleaf</a> </span>and other
+          Special thanks to <span class=""><a href="https://uiverse.io" class="foot-title-a"
+              target="_blank">uiverse.io</a>, <a href="https://www.flaticon.com" target="_blank"
+              class="foot-title-a">Flaticon</a>, <a href="https://www.overleaf.com/" target="_blank"
+              class="foot-title-a">Overleaf</a> </span>and other
           amazing resources for providing free content and inspiration.
         </p>
       </div>
