added patterns in background of blog shocase section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0031)https://ashish5jha.github.io/p/ -->
 <html lang="en">
 
 <head>
@@ -103,7 +102,6 @@
           technologies to stay ahead in this fast-evolving field.
         </p>
 
-        <!-- <a class="btn" href="https://ashish5jha.github.io/portfolio/about">about me</a> -->
       </article>
     </div>
   </section>
@@ -720,7 +718,7 @@
 
 
 
-  <section class="section-genius-adv section-strength section-vertical-space">
+  <section class="section-genius-adv section-strength section-vertical-space dotPattern">
     <div class="section-title exp-title">
       <h2 class="experience">My Blogs on Notion🌱</h2>
       <div>
@@ -730,14 +728,12 @@
       <div class="section-strength-row">
         <div class="section-strength-col animated-svg"
           onclick="goTo('https://hypnotic-amphibian-c6e.notion.site/Spring-Beans-12c986bf282a802b8fc1e1340cd71931')">
-          <div class="section-strength-img">
-            <img class="lazy" src="./assets/blob1.svg" alt="" width="80" height="80"
-              style="aspect-ratio:80/80;"><noscript><img src="./assets/blob1.svg" alt="" width="80"
-                height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
-              class="animated-svg lazy" data="./assets/animated_ai-laptop_blue.svg"></object>
-            <noscript><img alt="" width="48" height="48" class="animated-svg"
-                src="./assets/animated_ai-laptop_blue.svg"></noscript>
-
+                   <div class="section-strength-img">
+              <img class="lazy" src="./assets/blob1.svg" alt="" width="80" height="80" style="aspect-ratio:80/80;">
+              <noscript><img src="./assets/blob1.svg" alt="" width="80" height="80"></noscript>
+              <object data-target="div.section-strength-col" type="image/svg+xml" class="animated-svg lazy" data="./assets/animated_ai-laptop_blue.svg"></object>
+              <noscript><img alt="" width="48" height="48" class="animated-svg" src="./assets/animated_ai-laptop_blue.svg"></noscript>
+              <i class="fas fa-external-link-alt external-link-icon"></i>
           </div>
           <div class="section-strength-content">
             <h3 class="title-xs section-strength-title">Spring Beans</h3>
