--- a/projectsDetails.html
+++ b/projectsDetails.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Project Details - Nav Finder Backend</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nav Finder Backend</title>
     <link href="./assets/all.min.css" rel="stylesheet">
     <!-- css -->
     <link href="./assets/styles.css" rel="stylesheet">
@@ -15,9 +16,92 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo.webp">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo.webp">
     <link rel="manifest" href="./assets/site.webmanifest">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <style>
+        body {
+            height: fit-content;
+            width: 100vw;
+            background-image: url(../assets/liquidPattern.svg);
+            background-size: cover;
+            /* Adjusts the size of the background image to cover the entire element */
+            background-position: center;
+            /* Centers the background image */
+            background-repeat: no-repeat;
+            /* Prevents the background image from repeating */
+        }
+        footer{
+            position: absolute;
+            bottom: 0 !important;
+        }
+    </style>
 </head>
 
+<body>
+    <a href="https://ashish5jha.github.io/portfolio/"><img src="./assets/logo.webp" width="60px" height="60px"
+            class="nav-logo" alt="nav logo"></a>
+
+    <!-- Resume Button -->
+    <button href="#" class="button" style="--clr: #7808d0" onclick="getResume()">
+        <span class="download"> <img src="./assets/download.png" alt="download"></span>
+        Resume
+    </button>
+
+
+
+
+
+    <footer class="last-footer">
+
+        <div class="last-fwaves">
+            <div class="last-fwave" id="last-wave1"></div>
+        </div>
+        <div class="foot-container">
+            <div class="foot-container1">
+                <ul class="foot-collection">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="foot-container2">
+                <div class="loc">
+                    <i class="fas fa-map-marker-alt"></i> &nbsp;Delhi,&nbsp;India&nbsp; 💕
+                </div>
+                <div class="foot-name">Ashish Jha,</div>
+                <div class="foot-title">Software Developer</div>
+                <article class="hero-info">
+                    <ul class="social-icons foot-hero-icons">
+                        <li class="foot-index-neumorph">
+                            <a href="https://github.com/Ashjha75" class="social-icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </li>
+                        <li class="foot-index-neumorph">
+                            <a href="https://www.linkedin.com/in/ashish-jha-890ab3206/" class="social-icon"
+                                target="_blank">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li class="foot-index-neumorph">
+                            <a href="https://x.com/Ashish5Jha" class="social-icon" target="_blank">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+                <p class="thanks">
+                    Special thanks to <span class=""><a href="https://uiverse.io" class="foot-title-a"
+                            target="_blank">uiverse.io</a>, <a href="https://www.flaticon.com" target="_blank"
+                            class="foot-title-a">Flaticon</a>, <a href="https://www.overleaf.com/" target="_blank"
+                            class="foot-title-a">Overleaf</a> </span>and other
+                    amazing resources for providing free content and inspiration.
+                </p>
+            </div>
+        </div>
+    </footer>
+</body>
 
 </html>
