add Notion assets and styles for improved UI interaction

--- a/index.html
+++ b/index.html
@@ -726,14 +726,22 @@
     </div>
     <div class="wrap">
       <div class="section-strength-row">
-        <div class="section-strength-col animated-svg"
+        <div class="section-strength-col animated-svg" onmouseout="notionRemove('1')" onmouseover="notion('1')"
+          id="blog1"
           onclick="goTo('https://hypnotic-amphibian-c6e.notion.site/Spring-Beans-12c986bf282a802b8fc1e1340cd71931')">
-                   <div class="section-strength-img">
-              <img class="lazy" src="./assets/blob1.svg" alt="" width="80" height="80" style="aspect-ratio:80/80;">
-              <noscript><img src="./assets/blob1.svg" alt="" width="80" height="80"></noscript>
-              <object data-target="div.section-strength-col" type="image/svg+xml" class="animated-svg lazy" data="./assets/animated_ai-laptop_blue.svg"></object>
-              <noscript><img alt="" width="48" height="48" class="animated-svg" src="./assets/animated_ai-laptop_blue.svg"></noscript>
-              <i class="fas fa-external-link-alt external-link-icon"></i>
+          <div class="section-strength-img">
+            <img class="lazy first-image" src="./assets/blob1.svg" alt="" width="80" height="80"
+              style="aspect-ratio:80/80;">
+            <noscript><img src="./assets/blob1.svg" alt="" width="80" height="80"></noscript>
+            <object data-target="div.section-strength-col" type="image/svg+xml" class="animated-svg lazy"
+              data="./assets/animated_ai-laptop_blue.svg"></object>
+            <noscript><img alt="" width="48" height="48" class="animated-svg"
+                src="./assets/animated_ai-laptop_blue.svg"></noscript>
+            <!-- <i class="fas fa-external-link-alt external-link-icon"></i> -->
+            <div role="button" tabindex="0" class="notion-icon">
+              Made with <img src="./assets/notion.png" alt="notion" width="15" height="15" style="margin-left: 5px;"
+                id="notion1">
+            </div>
           </div>
           <div class="section-strength-content">
             <h3 class="title-xs section-strength-title">Spring Beans</h3>
@@ -742,16 +750,20 @@
               are created based on configuration metadata provided in XML, Java annotations, or Java configuration.</p>
           </div>
         </div>
-        <div class="section-strength-col animated-svg"
+        <div class="section-strength-col animated-svg" onmouseout="notionRemove('2')" onmouseover="notion('2')"
+          id="blog2"
           onclick="goTo('https://hypnotic-amphibian-c6e.notion.site/Spring-Boot-Application-768cddb1005e4c61818ffa4ca71027ba')">
           <div class="section-strength-img">
-            <img class="lazy" src="./assets/blob2.svg" alt="" width="80" height="80"
+            <img class="lazy first-image" src="./assets/blob2.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob2.svg" alt="" width="80"
                 height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
               class="animated-svg lazy" data="./assets/animated_document_orange.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_document_orange.svg"></noscript>
-
+            <div role="button" tabindex="0" class="notion-icon">
+              Made with <img src="./assets/notion.png" alt="notion" width="15" height="15" style="margin-left: 5px;"
+                id="notion2">
+            </div>
           </div>
           <div class="section-strength-content">
             <h3 class="title-xs section-strength-title">Spring Boot Application</h3>
@@ -759,15 +771,19 @@
               primarily by the Spring framework...</p>
           </div>
         </div>
-        <div class="section-strength-col animated-svg">
+        <div class="section-strength-col animated-svg" onmouseout="notionRemove('3')" onmouseover="notion('3')"
+          id="blog3">
           <div class="section-strength-img">
-            <img class="lazy" src="./assets/blob3.svg" alt="" width="80" height="80"
+            <img class="lazy first-image" src="./assets/blob3.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob3.svg" alt="" width="80"
                 height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
               class="animated-svg lazy" data="./assets/animated_database-success_green.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_database-success_green.svg"></noscript>
-
+            <div role="button" tabindex="0" class="notion-icon">
+              Made with <img src="./assets/notion.png" alt="notion" width="15" height="15" style="margin-left: 5px;"
+                id="notion3">
+            </div>
           </div>
           <div class="section-strength-content">
             <h3 class="title-xs section-strength-title">Auto-format each section</h3>
@@ -775,15 +791,19 @@
               your details and the resume maker does the rest.</p>
           </div>
         </div>
-        <div class="section-strength-col animated-svg">
+        <div class="section-strength-col animated-svg" onmouseout="notionRemove('4')" onmouseover="notion('4')"
+          id="blog4">
           <div class="section-strength-img">
-            <img class="lazy" src="./assets/blob4.svg" alt="" width="80" height="80"
+            <img class="lazy first-image" src="./assets/blob4.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob4.svg" alt="" width="80"
                 height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
               class="animated-svg lazy" data="./assets/animated_download_pink.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_download_pink.svg"></noscript>
-
+            <div role="button" tabindex="0" class="notion-icon">
+              Made with <img src="./assets/notion.png" alt="notion" width="15" height="15" style="margin-left: 5px;"
+                id="notion4">
+            </div>
           </div>
           <div class="section-strength-content">
             <h3 class="title-xs section-strength-title">Instantly download your resume</h3>
@@ -791,15 +811,19 @@
               test different templates to see what works best for you.</p>
           </div>
         </div>
-        <div class="section-strength-col animated-svg">
+        <div class="section-strength-col animated-svg" onmouseout="notionRemove('5')" onmouseover="notion('5')"
+          id="blog5">
           <div class="section-strength-img">
-            <img class="lazy" src="./assets/blob5.svg" alt="" width="80" height="80"
+            <img class="lazy first-image" src="./assets/blob5.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob5.svg" alt="" width="80"
                 height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
               class="animated-svg lazy" data="./assets/animated_concept-sharing_purple.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_concept-sharing_purple.svg"></noscript>
-
+            <div role="button" tabindex="0" class="notion-icon">
+              Made with <img src="./assets/notion.png" alt="notion" width="15" height="15" style="margin-left: 5px;"
+                id="notion5">
+            </div>
           </div>
           <div class="section-strength-content">
             <h3 class="title-xs section-strength-title">Get expert feedback</h3>
@@ -807,15 +831,19 @@
               professional feedback after you’ve made your resume.</p>
           </div>
         </div>
-        <div class="section-strength-col animated-svg">
+        <div class="section-strength-col animated-svg" onmouseout="notionRemove('6')" onmouseover="notion('6')"
+          id="blog6">
           <div class="section-strength-img">
-            <img class="lazy" src="./assets/blob6.svg" alt="" width="80" height="80"
+            <img class="lazy first-image" src="./assets/blob6.svg" alt="" width="80" height="80"
               style="aspect-ratio:80/80;"><noscript><img src="./assets/blob6.svg" alt="" width="80"
                 height="80"></noscript> <object data-target="div.section-strength-col" type="image/svg+xml"
               class="animated-svg lazy" data="./assets/animated_rocket_yellow.svg"></object>
             <noscript><img alt="" width="48" height="48" class="animated-svg"
                 src="./assets/animated_rocket_yellow.svg"></noscript>
-
+            <div role="button" tabindex="0" class="notion-icon">
+              Made with <img src="./assets/notion.png" alt="notion" width="15" height="15" style="margin-left: 5px;"
+                id="notion6">
+            </div>
           </div>
           <div class="section-strength-content">
             <h3 class="title-xs section-strength-title">Launch your job hunt</h3>
@@ -1027,7 +1055,9 @@
           Special thanks to <span class=""><a href="https://uiverse.io" class="foot-title-a"
               target="_blank">uiverse.io</a>, <a href="https://www.flaticon.com" target="_blank"
               class="foot-title-a">Flaticon</a>, <a href="https://www.overleaf.com/" target="_blank"
-              class="foot-title-a">Overleaf</a> </span>and other
+              class="foot-title-a">Icons8</a>, <a href="https://icons8.com/" target="_blank" class="foot-title-a">Font
+              Awesome</a>, <a href="https://fontawesome.com/" target="_blank" class="foot-title-a">Overleaf</a>
+          </span>and other
           amazing resources for providing free content and inspiration.
         </p>
       </div>
