removed extral blogs

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
               primarily by the Spring framework...</p>
           </div>
         </div>
-        <div class="section-strength-col animated-svg" onmouseout="notionRemove('3')" onmouseover="notion('3')"
+        <!-- <div class="section-strength-col animated-svg" onmouseout="notionRemove('3')" onmouseover="notion('3')"
           id="blog3">
           <div class="section-strength-img">
             <img class="lazy first-image" src="./assets/blob3.svg" alt="" width="80" height="80"
@@ -850,7 +850,7 @@
             <p class="body-sm">Equipped with your perfected resume, you’re ready to take on the job market. Get more job
               interviews &amp; earn better job offers.</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
